Urgent fix: Restored light mode accent borders, improved text contrast, fixed results layout

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
         body.light-mode .glass {
             background: #ffffff;
-            border: 1px solid #e5e7eb;
-            /* border-gray-200 */
+            /* border: 1px solid #e5e7eb;  Removed to preserve border-t-4 etc accents */
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
             /* shadow-md */
             backdrop-filter: none;
@@ -97,6 +96,24 @@
         body.light-mode .text-slate-400,
         body.light-mode .text-slate-500 {
             color: #374151 !important;
+            /* darkened for readability */
+        }
+
+        body.light-mode .text-slate-100,
+        body.light-mode .text-slate-200 {
+            color: #111827 !important;
+            /* primary text */
+        }
+
+        /* Fix Citation & Team in Light Mode */
+        body.light-mode #citation .text-white,
+        body.light-mode #team .text-slate-100 {
+            color: #111827 !important;
+        }
+
+        body.light-mode #team .text-blue-500 {
+            color: #2563eb !important;
+            /* darker blue */
         }
 
         body.light-mode h1,
@@ -536,38 +553,37 @@
                     <!-- Detailed Performance Comparison -->
                     <div class="grid md:grid-cols-1 lg:grid-cols-3 gap-6 mt-12">
                         <div class="glass p-6 rounded-2xl border-t-4 border-red-500 bg-red-500/5">
-                            <h4 class="font-bold text-xs uppercase tracking-widest text-red-400 mb-2">Window vs Subject
+                            <h4 class="font-bold text-xs uppercase tracking-widest text-red-400 mb-3">Window vs Subject
                             </h4>
-                            <div class="flex justify-between items-end mb-2">
-                                <span class="text-slate-400 text-xs">Window-wise</span>
+                            <div class="flex flex-col gap-1 mb-3">
+                                <span class="text-slate-400 text-[10px] uppercase">Window-wise CV</span>
                                 <span class="text-xl font-black text-red-300 decoration-line-through">92.0%</span>
                             </div>
-                            <div class="flex justify-between items-end">
-                                <span class="text-slate-200 text-xs font-bold">Strict LOSO</span>
-                                <span class="text-2xl font-black text-white">74.58%</span>
+                            <div class="flex flex-col gap-1">
+                                <span class="text-slate-200 text-[10px] font-bold uppercase">Strict LOSO</span>
+                                <span class="text-3xl font-black text-white">74.58%</span>
                             </div>
                             <p class="text-[10px] text-slate-500 mt-3 italic leading-tight">Different validation splits
                                 show performance gap.</p>
                         </div>
 
                         <div class="glass p-6 rounded-2xl border-t-4 border-blue-500 bg-blue-500/5">
-                            <h4 class="font-bold text-xs uppercase tracking-widest text-blue-400 mb-2">Baseline
+                            <h4 class="font-bold text-xs uppercase tracking-widest text-blue-400 mb-3">Baseline
                                 Comparison</h4>
-                            <div class="flex justify-between items-end mb-2">
-                                <span class="text-slate-400 text-xs">Bandpower SVM</span>
+                            <div class="flex flex-col gap-1 mb-3">
+                                <span class="text-slate-400 text-[10px] uppercase">Bandpower SVM</span>
                                 <span class="text-lg font-bold text-slate-300">71.46%</span>
                             </div>
-                            <div class="flex justify-between items-end">
-                                <span class="text-slate-200 text-xs font-bold">EEGNet (Ours)</span>
-                                <span class="text-2xl font-black text-white">74.58%</span>
+                            <div class="flex flex-col gap-1">
+                                <span class="text-slate-200 text-[10px] font-bold uppercase">EEGNet (Ours)</span>
+                                <span class="text-3xl font-black text-white">74.58%</span>
                             </div>
                             <p class="text-[10px] text-slate-500 mt-3 italic leading-tight">+3.12% improvement over
-                                standard
-                                spectral features.</p>
+                                standard spectral features.</p>
                         </div>
 
                         <div class="glass p-6 rounded-2xl border-t-4 border-purple-500 bg-purple-500/5">
-                            <h4 class="font-bold text-xs uppercase tracking-widest text-purple-400 mb-2">Spectral
+                            <h4 class="font-bold text-xs uppercase tracking-widest text-purple-400 mb-3">Spectral
                                 Insight</h4>
                             <p class="text-slate-300 text-sm leading-relaxed">
                                 <span class="text-purple-300 font-bold">Beta Band (13-30 Hz)</span> dominance was
