--- a/index.html
+++ b/index.html
@@ -315,6 +315,67 @@
 
         <div class="h-[1px] bg-white/10 my-12"></div>
 
+        <section id="system-methodology" class="space-y-12">
+            <h2 class="text-3xl md:text-5xl font-black text-center uppercase tracking-tight mb-12">System <span
+                    class="text-blue-500">Methodology</span></h2>
+            <div class="grid md:grid-cols-3 gap-8">
+                <!-- Card 1: Dataset -->
+                <div class="glass p-8 rounded-[2rem] border border-white/5 flex flex-col items-center text-center">
+                    <div class="w-16 h-16 rounded-full bg-blue-500/20 flex items-center justify-center mb-6">
+                        <i class="fas fa-database text-2xl text-blue-400"></i>
+                    </div>
+                    <h3 class="font-bold text-sm uppercase tracking-widest text-slate-200 mb-4">Dataset / Input</h3>
+                    <ul class="text-slate-400 text-xs space-y-2 leading-relaxed">
+                        <li>Dataset: UCSD ds002778 (OpenNeuro)</li>
+                        <li>Subjects: 31 (15 Parkinson’s, 16 Healthy)</li>
+                        <li>Channels: 40 EEG channels</li>
+                        <li>Sampling Rate: 512 Hz</li>
+                        <li>Windowing: 3-second windows with 50% overlap</li>
+                        <li>Total Windows: 5964</li>
+                    </ul>
+                </div>
+
+                <!-- Card 2: Model -->
+                <div class="glass p-8 rounded-[2rem] border border-white/5 flex flex-col items-center text-center">
+                    <div class="w-16 h-16 rounded-full bg-purple-500/20 flex items-center justify-center mb-6">
+                        <i class="fas fa-microchip text-2xl text-purple-400"></i>
+                    </div>
+                    <h3 class="font-bold text-sm uppercase tracking-widest text-slate-200 mb-4">Model / Architecture
+                    </h3>
+                    <ul class="text-slate-400 text-xs space-y-2 leading-relaxed">
+                        <li>Model: EEGNet (~2.6K parameters)</li>
+                        <li>Temporal Convolution</li>
+                        <li>Depthwise Spatial Convolution</li>
+                        <li>Separable Convolution</li>
+                        <li>Strict Leave-One-Subject-Out Cross-Validation</li>
+                    </ul>
+                </div>
+
+                <!-- Card 3: Execution -->
+                <div
+                    class="glass p-8 rounded-[2rem] border-2 border-green-500/20 bg-green-500/5 flex flex-col items-center text-center justify-center relative overflow-hidden">
+                    <div class="absolute top-0 right-0 w-20 h-20 bg-green-500/10 rounded-bl-[4rem]"></div>
+                    <div class="w-16 h-16 rounded-full bg-green-500/20 flex items-center justify-center mb-6">
+                        <i class="fab fa-python text-2xl text-green-400"></i>
+                    </div>
+                    <h3 class="font-bold text-sm uppercase tracking-widest text-slate-200 mb-6">Live Execution</h3>
+                    <div class="space-y-4 w-full">
+                        <a href="https://github.com/mahirdesai2004/pbl4-parkinsons-eeg" target="_blank"
+                            class="block w-full px-6 py-3 bg-green-600 hover:bg-green-500 rounded-xl text-white text-xs font-black uppercase tracking-widest transition shadow-lg shadow-green-900/20">
+                            <i class="fab fa-github mr-2"></i> View Repository
+                        </a>
+                        <a href="https://docs.google.com/presentation/d/1KppJAgqUCnIPFoWH1TPjRuJ3kur9LV0AP_PJ6f4o5zg/edit?usp=sharing"
+                            target="_blank"
+                            class="block w-full px-6 py-3 bg-white/10 hover:bg-white/20 rounded-xl text-white text-xs font-black uppercase tracking-widest transition border border-white/10">
+                            <i class="fas fa-file-powerpoint mr-2 text-orange-400"></i> View Presentation
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="h-[1px] bg-white/10 my-12"></div>
+
         <section id="methodology" class="space-y-12">
             <h2 class="text-4xl md:text-5xl font-black text-center uppercase tracking-tight">Materials & <span
                     class="text-blue-500">Methodology</span></h2>
