Added conference certificate and improved publication styling

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
             /* darker blue */
         }
 
+        body.light-mode #citation img {
+            border-color: #e5e7eb !important;
+        }
+
         body.light-mode h1,
         body.light-mode h2,
         body.light-mode h3,
@@ -734,16 +738,25 @@
                     <span class="font-bold not-italic text-white">International Conference on Intelligent Computing and
                         Communication (ICICC 2026)</span>
                 </p>
-                <div class="text-sm text-slate-400 space-y-1 font-mono">
-                    <p>Paper ID: ICICC2026-V015</p>
+                <div class="text-base text-slate-400 space-y-2 font-mono mt-8">
+                    <p class="text-lg text-slate-300 font-bold">Paper ID: ICICC2026-V015</p>
                     <p>Author: Mahir Desai</p>
                     <p>Guide: Dr. Juhi Singh</p>
                 </div>
-                <div class="mt-8 flex justify-center gap-4">
+                <div class="mt-8 flex justify-center gap-4 mb-12">
                     <span
                         class="px-6 py-2 bg-green-500/10 text-green-400 rounded-lg text-xs font-bold border border-green-500/20">
                         <i class="fas fa-check-circle mr-2"></i> Accepted Paper
                     </span>
+                </div>
+
+                <!-- Certificate Section -->
+                <div data-aos="fade-up" class="w-full max-w-[600px] mx-auto">
+                    <img src="figures/certificate.jpg" alt="ICICC 2026 Certificate"
+                        class="w-full rounded-2xl shadow-lg border border-white/10 light-mode:border-gray-200">
+                    <p class="text-xs text-slate-500 mt-4 font-medium uppercase tracking-wider">
+                        Conference Presentation Certificate – ICICC 2026
+                    </p>
                 </div>
             </div>
         </section>
